versions/v2.8/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/manage-role-based-access-control-rbac.adoc
= Managing Role-Based Access Control (RBAC)
:page-languages: [en, zh]
:revdate: 2024-09-26
:page-revdate: {revdate}

Within Rancher, each person authenticates as a _user_, which is a login that grants you access to Rancher. As mentioned in xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc[Authentication], users can either be local or external.

After you configure external authentication, the users that display on the *Users* page changes.

* If you are logged in as a local user, only local users display.
* If you are logged in as an external user, both external and local users display.

== Users and Roles

Once the user logs in to Rancher, their _authorization_, or their access rights within the system, is determined by _global permissions_, and _cluster and project roles_.

* xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc[Global Permissions]:
+
Define user authorization outside the scope of any particular cluster.

* xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc[Cluster and Project Roles]:
+
Define user authorization inside the specific cluster or project where they are assigned the role.

Both global permissions and cluster and project roles are implemented on top of https://kubernetes.io/docs/reference/access-authn-authz/rbac/[Kubernetes RBAC]. Therefore, enforcement of permissions and roles is performed by Kubernetes.
